# scanmaster

qnx/: CMakeLists.txt  WeldMaster.cmake.in  changesetId.h.in  config-weldmaster.h.cmake  qnx.kdev4  qnx_old.kdev4
qnx/.kdev4/: qnx.kdev4
qnx/Analyzer_Interface/: CMakeLists.txt
qnx/App_CHRCommunication/: AppMain.cpp  AppMain.h  App_CHRCommunication.cc  CMakeLists.txt
qnx/App_Calibration/: AppMain.cpp  AppMain.h  CMakeLists.txt  main.cc
qnx/App_EtherCATMaster/: AppMain.cpp  AppMain.h  App_EtherCATMaster.cc  CMakeLists.txt
qnx/App_Fieldbus/: AppMain.cpp  AppMain.h  App_Fieldbus.cc  CMakeLists.txt
qnx/App_Grabber/: AppMain.cpp  AppMain.h  CMakeLists.txt  main.cc
qnx/App_GrabberGigE/: CMakeLists.txt
qnx/App_GrabberNoHw/: AppMain.cpp  AppMain.h  CMakeLists.txt  main.cpp
qnx/App_Grapheditor/: CMakeLists.txt  resources.qrc  resources_plugin.qrc
qnx/App_Gui/: CMakeLists.txt  qtquickcontrols2.conf  resources.qrc
qnx/App_InspectionControl/: AppMain.cpp  AppMain.h  AutoRunner.h  CMakeLists.txt  VI_Main.cc
qnx/App_LoggerServer/: CMakeLists.txt  appLoggerServer.cpp  appLoggerServer.h
qnx/App_MockAxis/: CMakeLists.txt  resources.qrc
qnx/App_ModuleManager/: CMakeLists.txt
qnx/App_Scheduler/: AppMain.cpp  AppMain.h  App_Scheduler.cc  CMakeLists.txt
qnx/App_Service/: AppMain.cpp  AppMain.h  CMakeLists.txt  Service_VI.cc
qnx/App_Simulation/: AppMain.cpp  AppMain.h  CMakeLists.txt  commandServer.cpp  main.cpp
qnx/App_Storage/: CMakeLists.txt
qnx/App_TCPCommunication/: AppMain.cpp  AppMain.h  App_TCPCommunication.cc  CMakeLists.txt
qnx/App_Trigger/: AppMain.cpp  AppMain.h  App_Trigger.cc  CMakeLists.txt
qnx/App_VideoRecorder/: AppMain.cpp  AppMain.h  CMakeLists.txt  main.cc
qnx/App_WeldHeadControl/: AppMain.cpp  AppMain.h  CMakeLists.txt  VI_WeldHeadControl.cc
qnx/App_WobbelFigureEditor/: CMakeLists.txt  resources.qrc  resources_plugin.qrc
qnx/App_Workflow/: AppMain.cpp  AppMain.h  CMakeLists.txt  main.cc
qnx/ConnectServer/: AsyncSystemStarter.cpp  AsyncSystemStarter.h  CMakeLists.txt  ConnectServer.cpp  ConnectServerHandler.cpp  ConnectServerHandler.h  config-connectServer.h.cmake
qnx/Filter_Bridges/: CMakeLists.txt  blobSink.cpp  blobSink.h  blobSource.cpp  blobSource.h  doubleSink.cpp  doubleSink.h  doubleSource.cpp  doubleSource.h  houghPPCandidateSink.cpp  houghPPCandidateSink.h  houghPPCandidateSource.cpp  houghPPCandidateSource.h  imageSink.cpp  imageSink.h  imageSource.cpp  imageSource.h  lineSink.cpp  lineSink.h  lineSource.cpp  lineSource.h  manifest.cpp  pointListSink.cpp  pointListSink.h  pointListSource.cpp  pointListSource.h  poorPenetrationCandidateSink.cpp  poorPenetrationCandidateSink.h  poorPenetrationCandidateSource.cpp  poorPenetrationCandidateSource.h  sampleSink.cpp  sampleSink.h  sampleSource.cpp  sampleSource.h  seamFindingSink.cpp  seamFindingSink.h  seamFindingSource.cpp  seamFindingSource.h  startEndInfoSink.cpp  startEndInfoSink.h  (+6 more)
qnx/Filter_Calibration/: CMakeLists.txt  calibrationResult.cpp  calibrationResult.h  detectCalibrationLayers.cpp  detectCalibrationLayers.h  manifest.cpp  scanmasterFocusPoint.cpp  scanmasterFocusPoint.h  selectLayerRoi.cpp  selectLayerRoi.h  testCalibrationGrid.cpp  testCalibrationGrid.h
qnx/Filter_GapTracking/: CMakeLists.txt  ControlPositionInvertible.cpp  ControlPositionInvertible.h  GapPosRefine1.cpp  GapPosRefine1.h  HeightDifference.cpp  HeightDifference.h  Mismatch1.cpp  Mismatch1.h  RegelPosition.cpp  RegelPosition.h  TCPDistance.cpp  TCPDistance.h  displacement1.cpp  displacement1.h  gapPositionBreak.cpp  gapPositionBreak.h  gapPositionCircle.cpp  gapPositionCircle.h  gapPositionGeometry.cpp  gapPositionGeometry.h  gapPositionProjection.cpp  gapPositionProjection.h  manifest.cpp  souvisSourceExportedTypes.h  step.cpp  step.h  stepXT.cpp  stepXT.h
qnx/Filter_ImageProcessing/: CMakeLists.txt  adjustContrast.cpp  adjustContrast.h  binarize.cpp  binarize.h  binarizeDynamic.cpp  binarizeDynamic.h  binarizeDynamicOnOff.cpp  binarizeDynamicOnOff.h  caliper.cpp  caliper.h  cannyEdge.cpp  circleFit.cpp  circleFit.h  circleFitContour.cpp  circleFitContour.h  circleFitDefinitions.h  circleFitImpl.cpp  circleFitImpl.h  circleFitXT.cpp  circleFitXT.h  circleHough.cpp  circleHough.h  contourProfile.cpp  contourProfile.h  convolution3X3.cpp  convolution3X3.h  crossCorrelation.cpp  crossCorrelation.h  crossCorrelationDynamicTemplate.cpp  crossCorrelationDynamicTemplate.h  crossCorrelationImpl.cpp  crossCorrelationImpl.h  dynamicRoi.cpp  dynamicRoi.h  dynamicRoiSimple.cpp  dynamicRoiSimple.h  edgeDetection.cpp  edgeDetection.h  edgeDetectionImpl.cpp  (+93 more)
qnx/Filter_ImageSource/: CMakeLists.txt  imageSource.cpp  imageSource.h  manifest.cpp  sampleToImageSource.cpp  sampleToImageSource.h
qnx/Filter_LineGeometry/: CMakeLists.txt  LineFitter.cpp  LineFitter.h  MultipleIndicesStrategy.h  cavvex.cpp  cavvex.h  cavvexSimple.cpp  cavvexSimple.h  computeAngle.cpp  computeAngle.h  discoverRuns.cpp  discoverRuns.h  dispersion.cpp  dispersion.h  findBeadEnds.cpp  findBeadEnds.h  getRunBaseline.cpp  getRunBaseline.h  getRunData.cpp  getRunData.h  getRunData3D.cpp  getRunData3D.h  gradientTrend.cpp  gradientTrend.h  kCurvation.cpp  kCurvation.h  line2D.cpp  line2D.h  lineAdd.cpp  lineAdd.h  lineArithmetic.cpp  lineArithmetic.h  lineBrightness.cpp  lineBrightness.h  lineDisplay.cpp  lineDisplay.h  lineExtract.cpp  lineExtract.h  lineExtractDynamic.cpp  lineExtractDynamic.h  (+49 more)
qnx/Filter_LineTracking/: CMakeLists.txt  boundaryTracking.cpp  boundaryTracking.h  closeGaps.cpp  closeGaps.h  findGap.cpp  findGap.h  improveLine.cpp  improveLine.h  laserlineResults.cpp  laserlineResults.h  laserlineTracker1.cpp  laserlineTracker1.h  lineTracking.cpp  lineTracking.h  lineTrackingDist.cpp  lineTrackingDist.h  lineTrackingXT.cpp  lineTrackingXT.h  manifest.cpp  parallelMaximum.cpp  parallelMaximum.h  parallelMaximumOriented.cpp  parallelMaximumOriented.h  parallelMaximumXT.cpp  parallelMaximumXT.h  souvisSourceExportedTypes.h
qnx/Filter_PoreAnalysis/: CMakeLists.txt  blobAdapter.cpp  blobAdapter.h  blobDetection.cpp  (+29 more)
(+3714 files in other folders)
